--- a/application-dev.yml
+++ b/application-dev.yml
@@ -42,7 +42,7 @@ redis:
 ribbon:
   eager-load:
     enabled: true
-    clients: panda-auth,panda-user-service
+    clients: techhero-auth,techhero-user-service
   Httpclient:
     enabled: true
   OkHttp:
