--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,15 +1,10 @@
-eureka:
-  client:
-    service-url:
-      defaultZone: http://127.0.0.1:8761/eureka/
-
 server:
   tomcat:
     max-threads: 500 # Maximum amount of worker threads.
     min-spare-threads: 50 # Minimum amount of worker threads
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/cloud?useUnicode=true&characterEncoding=UTF8&useSSL=false&autoReconnect=true
+    url: jdbc:mysql://techhero-mysql:3306/cloud?useUnicode=true&characterEncoding=UTF8&useSSL=false&autoReconnect=true
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: root
@@ -22,12 +17,18 @@ spring:
     hikari:
       minimum-idle: 0
   redis:
-    host: 127.0.0.103
+    host: techhero-redis
     port: 6379
-    password: x19961010
-
+    password: 
+    timeout: 10000
+    lettuce:
+      pool:
+        max-idle: 30
+        min-idle: 10
+        max-active: 30
+        max-wait: 10000
   rabbitmq:
-    host: 127.0.0.1
+    host: techhero-rabbitmq
     port: 5672
     username: guest
     password: guest
@@ -35,22 +36,19 @@ spring:
     multipart:
       max-file-size: 1000MB
       max-request-size: 1000MB
-  zipkin: 
-    base-url: http://localhost:5001
 redis:
   cache:
     expiration: 3601
 ribbon:
   eager-load:
     enabled: true
-    clients: panda-auth,panda-user-service
+    clients: techhero-auth,techhero-user-service
   Httpclient:
     enabled: true
   OkHttp:
     enabled: false
   ReadTimeout: 10000
   ConnectTimeout: 10000
-
 feign:
   hystrix:
     enabled: true
@@ -80,13 +78,9 @@ hystrix:
         isolation:
           thread:
             timeoutInMilliseconds: 60000
-
 #关闭验证
 management:
   metrics:
     web:
       server:
         auto-time-requests: false
-
-
- 
