--- a/application-dev.yml
+++ b/application-dev.yml
@@ -4,18 +4,10 @@ server:
     min-spare-threads: 50 # Minimum amount of worker threads
 spring:
   datasource:
-    url: jdbc:mysql://techhero-mysql:3306/cloud?useUnicode=true&characterEncoding=UTF8&useSSL=false&autoReconnect=true
-    driver-class-name: com.mysql.jdbc.Driver
-    username: root
+    url: jdbc:oracle:thin:@47.105.130.127:1521:orcl
+    driver-class-name: oracle.jdbc.driver.OracleDriver
+    username: cloud
     password: root
-    max-idle: 10
-    min-idle: 5
-    test-on-borrow: false
-    time-between-eviction-runs-millis: 18800
-    test-while-idle: true
-    validation-query: SELECT 1
-    hikari:
-      minimum-idle: 0
   redis:
     host: techhero-redis
     port: 6379
